footer, remaining covers, img, nav fix

--- a/static/css/sceneworld.css
+++ b/static/css/sceneworld.css
@@ -68,7 +68,7 @@ blockquote {
 footer{
 	background-color: #303030;
 	width: 100%;
-	height: 250px;
+	height: 300px;
 	color: white;
 	padding-top: 40px;
 	margin-top:30px;
